samples/_failures_safe/1761460841_76140c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3fde9392.c: In function ‘main’:
./samples/SAFE/__tmp_3fde9392.c:129:9: error: expected expression at end of input
  129 |         else
      |         ^~~~
./samples/SAFE/__tmp_3fde9392.c:129:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_3fde9392.c:129:9: error: expected declaration or statement at end of input
